# rust-rustlang-graphql-postgres-docker-yogabytes

./: .env  Cargo.toml  README.md
error/: Cargo.toml
error/src/: error.rs  lib.rs
graphql-service/: Cargo.toml
graphql-service/src/: main.rs
graphql-service/src/gql/: mod.rs
graphql-service/src/gql/schema/: auth_user_schema.rs  member_schema.rs  mod.rs
rest-service/: Cargo.toml
rest-service/src/: main.rs
rest-service/src/controller/: auth_user_controller.rs  member_controller.rs  mod.rs  team_controller.rs  user_controller.rs
yugabyte/: Cargo.toml
yugabyte/migrations/2022-02-28-045410_create_auth_user/: down.sql  up.sql
yugabyte/migrations/2022-02-28-045419_create_team/: down.sql  up.sql
yugabyte/migrations/2022-02-28-045426_create_user/: down.sql  up.sql
yugabyte/migrations/2022-02-28-045432_create_member/: down.sql  up.sql
yugabyte/migrations/2022-02-28-235338_add_modification_date_column_to_member/: down.sql  up.sql
yugabyte/src/: context.rs  db_connection.rs  lib.rs  schema.rs
yugabyte/src/engine/: auth_user.rs  member.rs  mod.rs  team.rs  user.rs
yugabyte/src/model/: auth_user.rs  dto.rs  member.rs  mod.rs  team.rs  user.rs
yugabyte/src/util/: utils.rs
