[package]
name = "rust-demo"
version = "0.1.0"
authors = ["hschool510 <hschool510@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[workspace]
members = ["error", "graphql-service", "rest-service", "yugabyte"]