[package]
name = "graphql-service"
version = "0.1.0"
authors = ["hschool510 <hschool510@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-rt = "2.6.0"
juniper = "0.15.9"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
r2d2 = "0.8.9"
uuid = { version = "=0.8", features = ["serde", "v4"] }
dotenv = "0.15"
tracing-subscriber = "0.2"
serde_json = "1.0.44"
yugabyte = { path = "../yugabyte" }
error = { path = "../error" }