[package]
name = "rest-controller"
version = "0.1.0"
authors = ["hschool510 <hschool510@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
paperclip = { version = "0.5.0", features = ["actix-nightly", "uuid", "chrono"] }
uuid = { version = "=0.8", features = ["serde", "v4"] }
dotenv = "0.15"
tracing-subscriber = "0.2"
yugabyte = { path = "../yugabyte" }
error = { path = "../error" }